[project]
name = "pixel-labler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argostranslate>=1.10.0",
    "assemblyai>=0.48.4",
    "deep-translator>=1.11.4",
    "faster-whisper>=1.2.1",
    "flask>=3.1.2",
    "google-genai>=1.56.0",
    "ipython>=9.8.0",
    "mlx-whisper>=0.4.3",
    "opencc-python-reimplemented>=0.1.7",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pip>=25.3",
    "requests>=2.32.5",
    "srt>=3.5.3",
    "streamlink>=8.1.0",
    "yt-dlp>=2025.12.8",
]
